--- a/src/app/components/header-salarie/header-salarie.component.html
+++ b/src/app/components/header-salarie/header-salarie.component.html
@@ -5,8 +5,7 @@
                 <mat-icon>menu</mat-icon>
             </button>
             <span>EASY CONTRACT</span>
-            <span class="example-spacer"></span>
-            <span>Espace salarié</span>
+            
             <span class="example-spacer"></span>
 
             <button mat-button (click)="onDisconect()">
@@ -23,10 +22,10 @@
         <mat-nav-list>
 
             <a mat-list-item routerLink="/overview_s/profil" routerLinkActive="active" color="primary">
-                <mat-icon>account_circle</mat-icon>Mon profile
+                <mat-icon color="primary">account_circle</mat-icon>Mon profile
             </a>
             <a mat-list-item routerLink="/overview/chat" routerLinkActive="active">
-                <mat-icon>chat</mat-icon>Gérer mes contrats
+                <mat-icon color="primary">chat</mat-icon>Gérer mes contrats
             </a>
 
 
