--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -24,16 +24,16 @@
     <mat-nav-list>
 
       <a mat-list-item routerLink="/overview/profil" routerLinkActive="active" color="primary">
-        <mat-icon>account_circle</mat-icon>ProfilE
+        <mat-icon color="primary">account_circle</mat-icon>Profil
       </a>
       <a mat-list-item routerLink="/overview/salaries" routerLinkActive="active">
-        <mat-icon>people</mat-icon>Gérer mes salariés
+        <mat-icon color="primary">people</mat-icon>Gérer mes salariés
       </a>
       <a mat-list-item routerLink="/overview/contrats" routerLinkActive="active">
-        <mat-icon>content_copy</mat-icon>Gérer mes contrats
+        <mat-icon color="primary">content_copy</mat-icon>Gérer mes contrats
       </a>
       <a mat-list-item routerLink="/overview/addcontrat" routerLinkActive="active">
-        <mat-icon>post_add</mat-icon>Genérer un contrat
+        <mat-icon color="primary">post_add</mat-icon>Genérer un contrat
       </a>
 
     </mat-nav-list>
