--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -5,144 +5,151 @@
   </div>
 
 
-    <div class="contain">
+  <div class="contain">
 
-      <div>
-        <mat-form-field appearance="outline" >
-          <mat-label>
-            Civilité
-          </mat-label>
-          <mat-icon matPrefix>person</mat-icon>
-          <input matInput [value]="myProfil.civilite" disabled="disabled">
-        </mat-form-field>
+    <div>
+      <mat-form-field appearance="outline">
+        <mat-label>
+          Civilité
+        </mat-label>
+        <mat-icon matPrefix>person</mat-icon>
+        <input matInput [value]="myProfil.civilite" disabled="disabled">
+      </mat-form-field>
 
 
-      </div>
-
-      <div>
-        <mat-form-field appearance="outline" >
-          <mat-label>
-            Nom
-          </mat-label>
-          <mat-icon matPrefix>person</mat-icon>
-          <input matInput [value]="myProfil.nom" disabled="disabled">
-        </mat-form-field>
-
-      </div>
-      <div>
-        <mat-form-field appearance="outline" >
-          <mat-label>
-            Prénom
-          </mat-label>
-          <mat-icon matPrefix>person</mat-icon>
-          <input matInput [value]="myProfil.prenom" disabled="disabled">
-        </mat-form-field>
-      </div>
     </div>
 
-    <div class="contain">
-      <div>
-        <mat-form-field appearance="outline" >
-          <mat-label>
-            Rue
-          </mat-label>
+    <div>
+      <mat-form-field appearance="outline">
+        <mat-label>
+          Nom
+        </mat-label>
+        <mat-icon matPrefix>person</mat-icon>
+        <input matInput [value]="myProfil.nom" disabled="disabled">
+      </mat-form-field>
 
-          <input matInput [value]=" myProfil.rue" disabled="disabled">
-        </mat-form-field>
-
-      </div>
-
-      <div>
-        <mat-form-field appearance="outline">
-          <mat-label>
-            Code postal
-          </mat-label>
-
-          <input matInput [value]=" myProfil.cp" disabled="disabled">
-        </mat-form-field>
-
-      </div>
-      <div>
-        <mat-form-field appearance="outline">
-          <mat-label>
-            Ville
-          </mat-label>
-
-          <input matInput [value]="myProfil.ville " disabled="disabled">
-        </mat-form-field>
-
-      </div>
     </div>
-    <div class="contain">
+    <div>
+      <mat-form-field appearance="outline">
+        <mat-label>
+          Prénom
+        </mat-label>
+        <mat-icon matPrefix>person</mat-icon>
+        <input matInput [value]="myProfil.prenom" disabled="disabled">
+      </mat-form-field>
+    </div>
+  </div>
 
-      <div>
-        <mat-form-field appearance="outline">
-          <mat-label>
-            Pays
-          </mat-label>
-          <input matInput [value]="myProfil.pays" disabled="disabled">
-        </mat-form-field>
+  <div class="contain">
+    <div>
+      <mat-form-field appearance="outline">
+        <mat-label>
+          Rue
+        </mat-label>
 
-      </div>
+        <input matInput [value]=" myProfil.rue" disabled="disabled">
+      </mat-form-field>
 
-      <div>
-        <mat-form-field appearance="outline">
-          <mat-label>
-            Email
-          </mat-label>
-          <mat-icon matPrefix>local_post_office</mat-icon>
-          <input matInput [value]="myProfil.email" disabled="disabled">
-        </mat-form-field>
-
-      </div>
-      <div>
-        <mat-form-field appearance="outline">
-          <mat-label>
-            Téléphone
-          </mat-label>
-          <mat-icon matPrefix>phone</mat-icon>
-          <input matInput [value]="myProfil.telephone" disabled="disabled">
-        </mat-form-field>
-
-      </div>
     </div>
 
-    <div class="contain">
-      <div>
-        <mat-form-field appearance="outline" >
-          <mat-label>
-            Siret
-          </mat-label>
-          <input matInput [value]="myProfil.siret" disabled="disabled">
-        </mat-form-field>
-      </div>
+    <div>
+      <mat-form-field appearance="outline">
+        <mat-label>
+          Code postal
+        </mat-label>
 
-      <div>
-        <mat-form-field appearance="outline" >
-          <mat-label>
-            Raison sociale
-          </mat-label>
-          <input matInput [value]="myProfil.raison_sociale" disabled="disabled">
-        </mat-form-field>
+        <input matInput [value]=" myProfil.cp" disabled="disabled">
+      </mat-form-field>
 
-      </div>
-      <div>
-        <mat-form-field appearance="outline" >
-          <mat-label>
-            code_ape
-          </mat-label>
+    </div>
+    <div>
+      <mat-form-field appearance="outline">
+        <mat-label>
+          Ville
+        </mat-label>
 
-          <input matInput [value]="myProfil.code_ape" disabled="disabled">
-        </mat-form-field>
+        <input matInput [value]="myProfil.ville " disabled="disabled">
+      </mat-form-field>
 
-      </div>
+    </div>
+  </div>
+  <div class="contain">
+
+    <div>
+      <mat-form-field appearance="outline">
+        <mat-label>
+          Pays
+        </mat-label>
+        <input matInput [value]="myProfil.pays" disabled="disabled">
+      </mat-form-field>
+
     </div>
 
+    <div>
+      <mat-form-field appearance="outline">
+        <mat-label>
+          Email
+        </mat-label>
+        <mat-icon matPrefix>local_post_office</mat-icon>
+        <input matInput [value]="myProfil.email" disabled="disabled">
+      </mat-form-field>
+
+    </div>
+    <div>
+      <mat-form-field appearance="outline">
+        <mat-label>
+          Téléphone
+        </mat-label>
+        <mat-icon matPrefix>phone</mat-icon>
+        <input matInput [value]="myProfil.telephone" disabled="disabled">
+      </mat-form-field>
+
+    </div>
+  </div>
+
+  <div class="contain">
+    <div>
+      <mat-form-field appearance="outline">
+        <mat-label>
+          Siret
+        </mat-label>
+        <input matInput [value]="myProfil.siret" disabled="disabled">
+      </mat-form-field>
+    </div>
+
+    <div>
+      <mat-form-field appearance="outline">
+        <mat-label>
+          Raison sociale
+        </mat-label>
+        <input matInput [value]="myProfil.raison_sociale" disabled="disabled">
+      </mat-form-field>
+
+    </div>
+    <div>
+      <mat-form-field appearance="outline">
+        <mat-label>
+          code_ape
+        </mat-label>
+
+        <input matInput [value]="myProfil.code_ape" disabled="disabled">
+      </mat-form-field>
+
+    </div>
+  </div>
+
+
+    <div>
+
+
+<app-pad></app-pad>
+    </div>
 
     <div class="button">
 
       <button mat-raised-button color="primary" type="submit" (click)="openDialog()">Modifier</button>
 
     </div>
+
 
 </section>
