--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -98,6 +98,9 @@
           <input matInput placeholder="Code APE" formControlName="code_ape">
         </mat-form-field>
       </div>
+      <div>
+        <app-pad></app-pad>
+    </div>
       <div >
         <button mat-raised-button [disabled]="registerForm.invalid" color="primary" type="submit">Valider</button>
       </div>
