--- a/src/app/components/accueil/accueil.component.html
+++ b/src/app/components/accueil/accueil.component.html
@@ -7,10 +7,8 @@
         </mat-toolbar-row>
       </mat-toolbar>
     </p>
-  </div>
-
-  <div class="test">
-
+    </div>
+<div class="card">
       <mat-card>
         <mat-card-content>
           <H1>Easy Contract</H1>
@@ -21,7 +19,11 @@
                 routerLinkActive="active">Salarie</button></a>
           </div>
         </mat-card-content>
-      </mat-card>
+      </mat-card></div>
+
+
+<div class="">
+
 
   </div>
 
