--- a/src/app/components/profile-salarie/profile-salarie.component.scss
+++ b/src/app/components/profile-salarie/profile-salarie.component.scss
@@ -9,7 +9,8 @@
 }
 .contain{
   display: flex;
-  justify-content: start
+  justify-content: space-around;;
+  flex-wrap:wrap;
 }
 .button{
   display: flex;
@@ -20,5 +21,5 @@ input:disabled{
 
 }
 mat-form-field{
-    width:200px
+    width:200px;
 }
