--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -8,7 +8,13 @@
 }
 .contain{
   display: flex;
-  justify-content: start
+  justify-content: space-around;
+  flex-wrap:wrap;
+}
+canvas {
+  display: block;
+  border: 1px solid rgb(187, 178, 178);
+  background-color: var(--ion-color-success);
 }
 .button{
   display: flex;
