--- a/src/app/components/login-salarie/login-salarie.component.html
+++ b/src/app/components/login-salarie/login-salarie.component.html
@@ -2,7 +2,7 @@
 <div>
   <mat-toolbar color="primary">
     <mat-toolbar-row>
-      <a routerLink="/"><mat-icon>home</mat-icon></a>
+      <button><mat-icon>home</mat-icon></button>
     </mat-toolbar-row>
   </mat-toolbar>
 </div>
