--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,10 @@
-<a routerLink="/"><mat-icon>home</mat-icon></a>
+<div>
+  <mat-toolbar color="primary">
+    <mat-toolbar-row>
+      <button><mat-icon>home</mat-icon></button>
+    </mat-toolbar-row>
+  </mat-toolbar>
+</div>
 <div class="container">
 <section>
   <mat-progress-bar mode="indeterminate" *ngIf="isLogin"></mat-progress-bar>
