--- a/src/app/components/pad/pad.component.html
+++ b/src/app/components/pad/pad.component.html
@@ -8,6 +8,6 @@
     </div>
     <div>
         <button mat-button color="primary" (click)="clearPad()">Effacer</button>
-        <button mat-button color="accent" (click)="savePad()">Sauvegarder</button>
+        <button mat-button color="accent" type="button" (click)="savePad()">Sauvegarder</button>
     </div>
 </div>
