--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -10,3 +10,12 @@ align-items: center;
 }
 button{width: 100%;}
 
+canvas {
+  display: block;
+  border: 1px solid rgb(187, 178, 178);
+  background-color: var(--ion-color-success);
+}
+button {
+  margin: 10px;
+  margin-left: 10px;
+}
