--- a/src/app/components/accueil/accueil.component.html
+++ b/src/app/components/accueil/accueil.component.html
@@ -1,5 +1,5 @@
 
-<section class="container">
+<section class="main-container">
   <div>
     <p>
       <mat-toolbar color="primary">
@@ -12,14 +12,14 @@
       <mat-card>
         <mat-card-content>
           <H1>Easy Contract</H1>
+          <mat-divider></mat-divider>
           <div class="button">
-            <a routerLink="/entreprise/login"> <button mat-button color="primary"
-                routerLinkActive="active">Entreprise</button></a>
-            <a routerLink="/salarie/login"><button mat-button color="primary"
-                routerLinkActive="active">Salarie</button></a>
+            <button mat-raised-button color="primary" routerLink="/entreprise/login">Entreprise</button>
+            <button mat-raised-button color="primary" routerLink="/salarie/login">Salarié</button>
           </div>
         </mat-card-content>
-      </mat-card></div>
+      </mat-card>
+    </div>
 
 
 <div class="">
