--- a/src/app/components/login-salarie/login-salarie.component.scss
+++ b/src/app/components/login-salarie/login-salarie.component.scss
@@ -16,3 +16,14 @@ mat-card
 mat-form-field{
     width: 100%;
  }
+ .main-container{
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+.spacer {
+  flex: 1 1 auto;
+}
