--- a/src/app/components/login-salarie/login-salarie.component.html
+++ b/src/app/components/login-salarie/login-salarie.component.html
@@ -1,8 +1,13 @@
-
+<section class="main-container">
 <div>
   <mat-toolbar color="primary">
     <mat-toolbar-row>
-      <button><mat-icon>home</mat-icon></button>
+
+<span>
+      <button mat-button  routerlink="/home">
+        EasyContract
+           </button>
+           </span>
     </mat-toolbar-row>
   </mat-toolbar>
 </div>
@@ -27,9 +32,11 @@
           </div>
           <div>
             <mat-form-field appearance="outline">
-              <mat-label>Password</mat-label>
-              <input matInput placeholder="Password" formControlName="mdp">
-
+              <!-- <mat-label>Password</mat-label>
+              <input matInput placeholder="Password" formControlName="mdp"> -->
+              <input matInput placeholder="Password" [type]="hide ? 'mdp' : 'text'" formControlName="mdp" required>
+              <mat-icon  color="primary" matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+              <!-- <mat-hint *ngIf="!passwordInput.value">Enter your password</mat-hint> -->
             </mat-form-field>
           </div>
           <div class="button">
@@ -47,3 +54,4 @@
     </mat-card>
   </section>
 </div>
+</section>
