--- a/src/app/components/accueil/accueil.component.html
+++ b/src/app/components/accueil/accueil.component.html
@@ -15,6 +15,7 @@
           <mat-divider></mat-divider>
           <div class="button">
             <button mat-raised-button color="primary" routerLink="/entreprise/login">Entreprise</button>
+              <!-- <img src="favicon.ico"> -->
             <button mat-raised-button color="primary" routerLink="/salarie/login">Salarié</button>
           </div>
         </mat-card-content>
