--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,6 +1,6 @@
 
 .container{
-   
+
     width: 100%;
     height: 100%;
     display: flex;
@@ -17,4 +17,12 @@ mat-card
 {background:white;}
 mat-form-field{
    width: 100%;
+}
+.main-container{
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
