--- a/src/app/components/login-salarie/login-salarie.component.html
+++ b/src/app/components/login-salarie/login-salarie.component.html
@@ -34,7 +34,7 @@
             <mat-form-field appearance="outline">
 
               <input matInput placeholder="Password" [type]="hide ? 'password' : 'text'" formControlName="mdp" required>
-              <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+              <mat-icon matSuffix color="primary" (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
             </mat-form-field>
           </div>
           <div class="button">
