--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,14 +2,7 @@
   <div>
     <mat-toolbar color="primary">
       <mat-toolbar-row>
-
-        <span>
-
-
-          <button mat-button routerlink="/home">
-            EasyContract
-          </button>
-        </span>
+        <span routerLink="/home" [ngStyle]="{ cursor: 'pointer' }">EasyContract</span>
       </mat-toolbar-row>
     </mat-toolbar>
   </div>
